@@ -16,11 +16,14 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.assertj:assertj-core:3.24.2'
     spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.13.0'
+    testImplementation 'org.mockito:mockito-core:5.13.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.13.0'
 }
 
 test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
+    jvmArgs '-Dnet.bytebuddy.experimental=true'
 }
 
 jacocoTestReport {
